# kitten_on_keys

./: README.md  audio_test.py  environment.yml  pyproject.toml  setup.sh
k_on_k/: main.py
k_on_k/audio_capture/: __init__.py  service.py
k_on_k/config/: __init__.py  settings.py
k_on_k/daemon/: __init__.py  service.py
k_on_k/hotkey_service/: __init__.py  service.py
k_on_k/speech_recognition/: __init__.py  faster_whisper_service.py  service.py  whisper_service.py
k_on_k/text_insertion/: __init__.py  service.py
