[project]
name = "kitten-on-keys"
version = "0.1.0"
description = "VTT using whisper AI for RT transcription of voice-to-text in linux terminal and gui."
authors = [
    {name = "Phillip Middleton",email = "pmiddlet72@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [
    { include = "k_on_k" }
]
